adjust transition speed and fix modal and dropdown scrollbar padding (#30)

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -127,7 +127,7 @@ body {
 
 	min-height: 100vh;
 	width: 100%;
-	padding-right: var(--scrollbar-padding, 0);
+	padding-right: var(--scrollbar-padding, 0) !important;
 	overflow: visible !important;
 
 	flex-direction: column;
